fix(md): fix code block overflow

--- a/src/assets/markdown.css
+++ b/src/assets/markdown.css
@@ -13,7 +13,8 @@
     background-color: var(--highlight-bg);
     font-family: 'Cascadia Mono', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display: block;
-    padding: 0.6rem 0rem 0.6rem 1.2rem;
+    padding: 0.6rem 0.6rem 0.6rem 1.2rem;
+    width: fit-content !important;
     min-width: 100%;
     transition: color .5s;
     border-radius: 0.5rem;
